@@ -1,5 +1,12 @@
 2007-11-30  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* source/org/jfree/data/xy/XYDataItem.java
+	(getXValue): New method,
+	(getYValue): Likewise,
+	(toString): Likewise.
+	
+2007-11-30  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* source/org/jfree/chart/LocalizationBundle_it.properties:
 	Fixed errors.
 	
